fixed styles for aligning of blocks

--- a/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_style.css
+++ b/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_style.css
@@ -764,7 +764,7 @@ you can use the generic selector below, but it's slower:
 .page-node-microsite #left-nav #left-nav-links li,
 .page-node-microsite #left-nav #left-nav-links a {
   color: #FFF;
-  line-height: 20px;
+  line-height: 0.8em;
   letter-spacing: 1px;
   margin-bottom: 15px;
   outline: none;
@@ -967,6 +967,7 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
 /*}*/
 #microsite .usa-microsite-featured {
   margin: 0 auto 100px;
+  max-width: 1245px;
 }
 
 #microsite .usa-microsite-featured .microsite-carousel-processed .carousel-viewport {
@@ -1056,6 +1057,16 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
 
 
 /* media breakpoints*/
+@media (min-width: 1601px) and (max-width: 1840px){
+  #microsite #section-home .microsite-section-container {
+    padding-left: calc(1600px - 84%);
+  }
+}
+@media (min-width: 1401px) and (max-width: 1600px){
+  #microsite #section-videos .microsite-section-container {
+    padding-left: calc(1400px - 84%);
+  }
+}
 @media (min-width: 1601px) {
   #microsite #main-slider {
     height: 506px;
@@ -1078,7 +1089,6 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
 @media (min-width: 1401px){
   #microsite section .microsite-section-container{
     margin: 0 auto;
-    padding-left: 265px;
     max-width: 1500px;
   }
 }
@@ -1093,6 +1103,10 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
   }
   #microsite .a-spot-panel #show-main-slider{
     max-height: 378px;
+  }
+  #microsite #section-home .microsite-section-container {
+    margin: 0 auto;
+    padding-left: calc(1400px - 91%);
   }
 }
 @media (min-width: 1025px) and (max-width: 1280px){
@@ -1136,7 +1150,12 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
   }
 
 }
-
+@media (min-width: 1025px) and (max-width: 1200px){
+  #microsite #section-home .microsite-section-container {
+    margin: 0 auto;
+    padding-left: 30px;
+  }
+}
 @media (max-width: 1200px){
   #microsite #main-slider {
     width: 615px;
